bugfix: delete button visible for cards owned my user

--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -26,9 +26,9 @@
 }
 
 .modal__footer {
-  margin: 20px auto 32px 32px;
-  background-color: white;
   display: flex;
+  justify-content: space-between;
+  margin: 20px auto 32px 32px;
 }
 
 .modal__caption {
@@ -46,8 +46,8 @@
 .modal__delete-btn {
   margin: 0 32px 0 auto;
   background: transparent;
-  border: none;
   color: rgba(255, 77, 0, 1);
+  border: none;
   padding: 0;
   height: 24px;
   font-size: 20px;
